name:                 filepath-extra
version:              0.1.0.0
synopsis:             Functions missing in filepath library
-- description:
homepage:             https://github.com/trskop/filepath-extra
license:              BSD3
license-file:         LICENSE
author:               Peter Trško
maintainer:           peter.trsko@gmail.com
-- copyright:
category:             System
build-type:           Simple
-- extra-source-files:
cabal-version:        >=1.10

library
  hs-source-dirs:       src
  exposed-modules:
    System.FilePath.Extra
  -- other-modules:
  -- other-extensions:
  build-depends:
      base >=4.6 && <4.8
    , filepath
  default-language:     Haskell2010
