name:                 filepath-extra
version:              0.1.0.0
synopsis:             Functions missing in filepath library
description:
  Library introduces path combinators built on top of @filepath@ library. There
  are better ways to describe paths, in Haskell, but one thing makes `filepath`
  unsurpassed, it is shipped with GHC.
homepage:             https://github.com/trskop/filepath-extra
license:              BSD3
license-file:         LICENSE
author:               Peter Trško
maintainer:           peter.trsko@gmail.com
copyright:            Copyright (c) 2014 Peter Trško
category:             System
build-type:           Simple
cabal-version:        >=1.10

extra-source-files:   README.md

library
  hs-source-dirs:       src
  exposed-modules:
    System.FilePath.Extra
  other-extensions:     NoImplicitPrelude
  build-depends:
      base >=4.6 && <4.8
    , filepath >= 1.0 && < 2
    -- ^ This library only uses splitPath, joinPath and </> which were all
    -- present since version 1.0.
  default-language:     Haskell2010
